--- a/diplom/diplom.csproj
+++ b/diplom/diplom.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Aspose.GIS" Version="24.11.0" />
     <PackageReference Include="GMap.NET.Core" Version="2.1.6" />
     <PackageReference Include="GMap.NET.WinForms" Version="2.1.6" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.0" />
     <PackageReference Include="LiveCharts" Version="0.9.7" />
     <PackageReference Include="LiveCharts.WinForms" Version="0.9.7.1" />
   </ItemGroup>
